--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -21,7 +21,9 @@ jobs:
       before_build_deps_install: |
         curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
         apt-get install -y nodejs
-        curl -fsSL https://packagecloud.io/install/repositories/dionysius/immich/script.deb.sh | bash -
+        curl -fsSL https://build.opensuse.org/projects/home:dionysius:immich/signing_keys/download?kind=gpg | sudo gpg --dearmor -o /etc/apt/keyrings/obs-dionysius.key
+        echo "deb [signed-by=/etc/apt/keyrings/obs-dionysius.key] https://download.opensuse.org/repositories/home:/dionysius:/immich/Debian_13/ /" | sudo tee /etc/apt/sources.list.d/obs-dionysius.list
+        sudo apt update
     secrets:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   release:
