--- a/debian/immich-machine-learning.service
+++ b/debian/immich-machine-learning.service
@@ -9,19 +9,34 @@ User=immich
 Group=immich
 # Any files created are only owned by user and group immich
 UMask=0007
+
+# Directories used by the service
+CacheDirectory=immich
+
 # The location of the env file for configuration
 EnvironmentFile=/etc/default/immich-machine-learning
 # build info
 EnvironmentFile=/usr/share/doc/immich-machine-learning/build.env
+
 # Start the server
-# TODO: venv?
 ExecStart=/usr/lib/immich/machine-learning/bin/uv run --extra $DEVICE -m immich_ml
 # Set the working directory
 WorkingDirectory=/usr/lib/immich/machine-learning
-# Ensure the service has read/write access to the cache directories
-ReadWritePaths=/var/cache/immich
+
 # Restart on failure
 Restart=on-failure
+RestartSec=5s
+
+# Basic security hardening
+NoNewPrivileges=yes
+PrivateTmp=yes
+ProtectSystem=strict
+ProtectHome=yes
+ProtectKernelTunables=yes
+ProtectControlGroups=yes
+RestrictRealtime=yes
+RestrictSUIDSGID=yes
+LockPersonality=yes
 
 [Install]
 WantedBy=multi-user.target
