don't start immich-server on install which needs configuration, add dependencies for compilation for uv for immich-machine-learning

--- a/debian/control
+++ b/debian/control
@@ -73,7 +73,9 @@ Pre-Depends: ${misc:Pre-Depends},
 #          python3-pydantic-settings,
 #          python3-huggingface-tokenizers, # this is missing
 #          ... and maybe more
-Depends: python3,
+# We compile stuff in uv so need a compiler and other headers
+Depends: g++,
+         libgl-dev,
          ${misc:Depends},
 Recommends: ${misc:Recommends},
 Built-Using: ${misc:Built-Using},
