--- a/debian/immich-machine-learning.service
+++ b/debian/immich-machine-learning.service
@@ -17,11 +17,9 @@ CacheDirectory=immich
 EnvironmentFile=/etc/default/immich-machine-learning
 # build info
 EnvironmentFile=/usr/share/doc/immich-machine-learning/build.env
-# Add uv to PATH
-Environment=PATH=/usr/lib/immich/machine-learning/bin:$PATH
 
 # Start the server
-ExecStart=uv run --extra $DEVICE -m immich_ml
+ExecStart=/usr/lib/immich/machine-learning/bin/uv run --extra $DEVICE -m immich_ml
 # Set the working directory
 WorkingDirectory=/usr/lib/immich/machine-learning
 
