immich-server and immich-cli now require nodejs 24.x

--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -19,12 +19,12 @@ jobs:
       DEBFULLNAME: dionysius (github-actions)
       DEBEMAIL: dragon.dionysius+gha@gmail.com
       before_build_deps_install: |
-        curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
+        curl -fsSL https://deb.nodesource.com/setup_24.x | bash -
         apt-get install -y nodejs
-        curl -fsSL https://build.opensuse.org/projects/home:dionysius:immich/signing_keys/download?kind=gpg | sudo gpg --dearmor -o /etc/apt/keyrings/obs-dionysius.key
+        curl -fsSL https://build.opensuse.org/projects/home:dionysius:immich/signing_keys/download?kind=gpg | gpg --dearmor -o /etc/apt/keyrings/obs-dionysius.key
         dist="$(lsb_release -si)_$(lsb_release -sr)"
         [[ "$dist" == Ubuntu* ]] && dist="x${dist}"
-        echo "deb [signed-by=/etc/apt/keyrings/obs-dionysius.key] https://download.opensuse.org/repositories/home:/dionysius:/immich/$dist/ /" | sudo tee /etc/apt/sources.list.d/obs-dionysius.list
+        echo "deb [signed-by=/etc/apt/keyrings/obs-dionysius.key] https://download.opensuse.org/repositories/home:/dionysius:/immich/$dist/ /" | tee /etc/apt/sources.list.d/obs-dionysius.list
         apt-get update
     secrets:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
