add shlibs:Depends for immich-machine-learning package

--- a/debian/control
+++ b/debian/control
@@ -76,6 +76,7 @@ Depends: g++,
          libgl-dev,
          libmimalloc3,
          ${misc:Depends},
+         ${shlibs:Depends},
 Recommends: ${misc:Recommends},
 Built-Using: ${misc:Built-Using},
 Description: Self-hosted photo and video management solution - ML server
