add perl:Depends for immich-server package

--- a/debian/control
+++ b/debian/control
@@ -46,6 +46,7 @@ Depends: imagemagick,
          libvips42t64 (>= 8.17.2),
          nodejs (>= 24),
          ${misc:Depends},
+         ${perl:Depends},
          ${shlibs:Depends},
 Recommends: immich-machine-learning,
             ${misc:Recommends},
