set UV_THREADPOOL_SIZE by detection only if not already set (allows custom override via env file)

--- a/debian/immich-server.service
+++ b/debian/immich-server.service
@@ -29,9 +29,11 @@ EnvironmentFile=/usr/share/doc/immich-server/build.env
 
 # Start the server
 ExecStart=/bin/sh -c ' \
-  CPU_CORES=$(/usr/lib/immich/server/bin/get-cpus.sh); \
-  if [ "$CPU_CORES" -gt 4 ]; then \
-    UV_THREADPOOL_SIZE=$CPU_CORES; \
+  if [ -z "$UV_THREADPOOL_SIZE" ]; then \
+    CPU_CORES=$(/usr/lib/immich/server/bin/get-cpus.sh); \
+    if [ "$CPU_CORES" -gt 4 ]; then \
+      UV_THREADPOOL_SIZE=$CPU_CORES; \
+    fi; \
   fi; \
   LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/jellyfin-ffmpeg/lib \
   PATH=/usr/lib/jellyfin-ffmpeg:$PATH \
