exclude node warnings in immich-admin like upstream

--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -36,4 +36,5 @@ jobs:
     needs: [build-native]
     uses: dionysius/gbp-gha/.github/workflows/release.yml@main
     with:
+      prerelease: true
       publish: true
