--- a/debian/rules
+++ b/debian/rules
@@ -154,7 +154,7 @@ override_dh_shlibdeps:
 
 override_dh_installman:
 	mkdir -p $(TMPDEB)/man/immich-cli $(TMPDEB)/man/immich-server
-	cd $(TMPDEB)/usr/lib/immich/server && help2man "node dist/main immich-admin" -s 8 -n "Administrative command line interface for Immich" --no-info --no-discard-stderr --version-string "immich-admin $(DEB_VERSION_UPSTREAM)" -S immich-server > $(CURDIR)/$(TMPDEB)/man/immich-server/immich-admin.8
+	cd $(TMPDEB)/usr/lib/immich/server && help2man "node --no-warnings dist/main immich-admin" -s 8 -n "Administrative command line interface for Immich" --no-info --no-discard-stderr --version-string "immich-admin $(DEB_VERSION_UPSTREAM)" -S immich-server > $(CURDIR)/$(TMPDEB)/man/immich-server/immich-admin.8
 	help2man $(TMPDEB)/usr/lib/immich/cli/bin/immich -n "Command line interface for Immich" --no-info --no-discard-stderr -S immich-cli > $(TMPDEB)/man/immich-cli/immich.1
 	ls -1 -d $(TMPDEB)/man/immich-cli/* > "debian/immich-cli.manpages"
 	ls -1 -d $(TMPDEB)/man/immich-server/* > "debian/immich-server.manpages"
